tests/semantic/read_err1.expected

Semantic Error [line 5]: value: "buf"
	Unexpected r-value type: 
Expected type(s) 'Variable'; found 'Constant' instead.
