tests/semantic/read_err1.mtp
(*Read statement with constant*)
const buf := 0;

begin
	read(buf);
end.